PR2259: Integration tests fail if mongod is not found in std PATH. Reviewed-by: omajid, neugens Review-thread: http://icedtea.classpath.org/pipermail/thermostat/2015-March/013020.html